fixed experience:before on safari

--- a/style.css
+++ b/style.css
@@ -155,6 +155,10 @@ li{
     float: left;
     width: 0;
     height: 0;
+    -ms-transform: translate(-8%, -15px);
+    -moz-transform: translate(-8%, -15px);
+    -o-transform: translate(-8%, -15px);
+    -webkit-transform: translate(-8%, -15px);
     transform: translate(-8%, -15px);
     background: transparent;
     background-image: url(assets/tab-backgrounds/extras-blur.jpg);
@@ -221,6 +225,7 @@ li{
 .experience-icon:hover:before {
 
     animation: bord-animation-front 0.8s forwards;
+    -webkit-animation: bord-animation-front 0.8s forwards;
 
 }
 
@@ -254,6 +259,44 @@ li{
         width: 64%;
         height: 80px;
         transform: translate(-8%, -15px);
+        border-top-color: white;
+        border-right-color: white;
+        border-bottom-color: white;
+        border-left-color: white;
+        opacity: 1;
+    }
+}
+
+@-webkit-keyframes bord-animation-front {
+    0%
+    {
+        width: 0;
+        height: 0;
+        -webkit-transform: -webkit-translate(-50%, -15px);
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: white;
+        opacity: 1;
+    }
+
+    40%
+    {
+        width: 0;
+        height: 80px;
+        -webkit-transform: -webkit-translate(-20%, -15px);
+        border-top-color: transparent;
+        border-right-color: transparent;
+        border-bottom-color: transparent;
+        border-left-color: white;
+        opacity: 1;
+    }
+
+    100%
+    {
+        width: 64%;
+        height: 80px;
+        -webkit-transform: -webkit-translate(-12%, -15px);
         border-top-color: white;
         border-right-color: white;
         border-bottom-color: white;
